[build-system]
requires = ["setuptools>=61.0","certifi==2022.6.15","charset-normalizer==2.1.0","click==8.1.3","flask==2.1.3","flask-cors==3.0.10","idna==3.3","itsdangerous==2.1.2","jinja2==3.1.2","markupsafe==2.1.1","numpy==1.23.1","pyjwt==2.4.0","pymediainfo==5.1.0","pyyaml==6.0","requests==2.28.1","six==1.16.0","tqdm==4.64.0","urllib3==1.26.10","werkzeug==2.2.0a1"]
build-backend = "setuptools.build_meta"

[project]
name = "DanDanPlayPython"
version = "0.0.2"
authors = [{ name="CBYellowstone", email="cberyellowstone@outlook.com" },]
description = "A small example package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"