[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DanDanPlayPython"
authors = [{ name="CBYellowstone", email="cberyellowstone@outlook.com" },]
description = "A small example package"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
dependencies = [
    "click==8.1.3",
    "flask==2.1.3",
    "flask-cors==3.0.10",
    "pyjwt==2.4.0",
    "pymediainfo==5.1.0",
    "pyyaml==6.0",
    "requests==2.28.1",
    "tqdm==4.64.0",
]

[tool.setuptools.dynamic]
version = {attr = "DanDanPlayPython.VERSION"}

[project.urls]
"Homepage" = "https://github.com/CberYellowstone/DanDanPlay-Python"
"Bug Tracker" = "https://github.com/CberYellowstone/DanDanPlay-Python/issues"