[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DanDanPlayPython"
authors = [{name="CBYellowstone", email="administrator@mail.ystone.top" }]
description = "Python implementation of DanDanPlay Remote Media Library."
keywords = ["anime", "media", "dandanplay"]
readme = "README.md"
license = {text = "AGPL v3"}
requires-python = ">=3.7"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Framework :: Flask",

]
dependencies = [
    "click==8.1.3",
    "flask==2.1.3",
    "flask-cors==3.0.10",
    "pyjwt==2.4.0",
    "pymediainfo==5.1.0",
    "pyyaml==6.0",
    "requests==2.28.1",
    "tqdm==4.64.0",
]

[tool.setuptools.dynamic]
version = {attr = "DanDanPlayPython.VERSION"}

[project.scripts]
dandanplay-python = "DanDanPlayPython.cli:CLI"

[project.urls]
home-page = "https://github.com/CberYellowstone/DanDanPlay-Python"
bug-tracker = "https://github.com/CberYellowstone/DanDanPlay-Python/issues"
